[tool.poetry]
name = "lookit-api"
version = "0.1.0"
description = ""
authors = ["lookit <lookit@mit.edu>"]

[tool.poetry.dependencies]
bcrypt = "3.2.0"
boto3 = "1.20.50"
celery = "4.4.7"
ciso8601 = "2.1.3"
Django = "3.2.25"
django-ace-overlay = { git = "https://github.com/lookit/django-ace-overlay.git", branch = "master" }
django-bitfield = "2.1.0"
django-bootstrap5 = "22.2"
django-celery-beat = "2.0.0"
django-cors-headers = "3.13.0"
django-countries = "7.2.1"
django-extensions = "3.1.5"
django-filter = "2.4.0"
django-guardian = "2.3.0"
django-localflavor = "3.1"
django-model-utils = "4.0.0"
django-multiselectfield = "0.1.12"
django-pandas = "0.6.2"
django-prettyjson = "0.4.1"
django-revproxy = { git = "https://github.com/Innovativity/django-revproxy.git", branch = "b9fa8375d03fd68747dcb7273a97c19d788aa51b" }
django-storages = "1.14.2"
djangorestframework = "3.12.4"
djangorestframework-jsonapi = "3.1.0"
docker = "4.2.1"
drf-nested-routers = "0.93.3"
fleep = "1.0.1"
gevent = "21.12.0"
google-cloud-storage = "2.1.0"
greenlet = "1.1.2"
kombu = "4.6.11"
lark-parser = "0.12.0"
more-itertools = "8.8.0"
psycogreen = "1.0.2"
psycopg2-binary = "2.9.9"
pydenticon = "0.3.1"
pyotp = "2.6.0"
python = ">=3.9 <3.10"
python-dateutil = "2.8.1"
qrcode = "6.1"
requests = "2.32.3"
sendgrid-django = "4.2.0"
sentry-sdk = "1.17.0"
transitions = "0.9.1"
uWSGI = "2.0.22"
pillow = "10.3.0"
django-bootstrap-icons = "0.8.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2"
django-sslserver = "0.22"
parameterized = "^0.8.1"
pyinstrument = "4.7.1"
python_dotenv = "0.18.0"
django-dynamic-fixture = "^4.0.1"
beautifulsoup4 = "^4.10.0"
pre-commit = "2.18.1"
libsass = "^0.22.0"
djlint = "1.35.2"
ruff = "0.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
ignore = "H006,H021,T027"
extend_exclude = "bootstrap,ember_build"

[tool.ruff]
lint.select = ["F", "I", "TID"]
