[project]
name = "lookit-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "boto3==1.40.24",
    "ciso8601==2.3.2",
    "django==5.2.2",
    "django-ace-overlay",
    "django-bitfield==2.2.0",
    "django-bootstrap-icons==0.9.0",
    "django-bootstrap5==22.2",
    "django-celery-beat==2.8.1",
    "django-cors-headers==3.13.0",
    "django-countries==7.6.1",
    "django-extensions==4.1",
    "django-filter==2.4.0",
    "django-guardian==2.4.0",
    "django-localflavor==4.0",
    "django-model-utils==5.0.0",
    "django-multiselectfield==0.1.13",
    "django-prettyjson==0.4.1",
    "django-revproxy",
    "django-storages==1.14.6",
    "djangorestframework==3.16.0",
    "djangorestframework-jsonapi==7.1.0",
    "docker==7.1.0",
    "drf-nested-routers==0.94.1",
    "fleep==1.0.1",
    "gevent==25.4.2",
    "google-cloud-storage==3.1.0",
    "lark-parser==0.12.0",
    "more-itertools==10.7.0",
    "psycogreen==1.0.2",
    "psycopg2-binary==2.9.10",
    "pydenticon==0.3.1",
    "pyotp==2.9.0",
    "python-dateutil==2.9.0.post0",
    "qrcode==8.1",
    "requests==2.32.4",
    "sendgrid-django==4.2.0",
    "sentry-sdk==2.27.0",
    "stream-zip>=0.0.83",
    "transitions==0.9.2",
    "uwsgi==2.0.29",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.13.3",
    "coverage==7.6.12",
    "django-dynamic-fixture==4.0.1",
    "libsass==0.23.0",
    "parameterized==0.9.0",
    "pre-commit==4.2.0",
    "pyinstrument==5.0.1",
    "pyopenssl==25.0.0",
    "python-dotenv==1.0.1",
    "ruff==0.11.6",
    "werkzeug==3.1.3",
]

[tool.uv.sources]
django-ace-overlay = { git = "https://github.com/lookit/django-ace-overlay.git", rev = "master" }
django-revproxy = { git = "https://github.com/Innovativity/django-revproxy.git", rev = "b9fa8375d03fd68747dcb7273a97c19d788aa51b" }

[tool.ruff]
lint.select = ["F", "I", "TID"]

[tool.setuptools.packages.find]
include = ["accounts", "api", "exp", "project", "studies", "web"]
